Add new exception, fix unhandled broken pipe on send, add comments

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 # Main executable file
 /lumify
 
-# Testing folder while developing something
-/testing
+# Testing folder executables
+/testing/client
+/testing/server
