Add spdlog, for logging

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -4,7 +4,7 @@ OBJ      = client.o server.o clientudp.o serverudp.o ../src/sockets.o
 LINKOBJ  = server.o client.o clientudp.o serverudp.o ../src/sockets.o
 LIBS     = 
 INCS     = 
-CXXINCS  = -I"../include/"
+CXXINCS  = -I"../include"
 BIN      = lumify
 CXXFLAGS = $(CXXINCS) -std=c++11 -g3 -ggdb3
 CFLAGS   = $(INCS) -std=c11 -ggdb3
